# showcount

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BACKLOG.md  DESIGN.md  DEVELOPMENT.md  README.md  STYLE.md  TODO.md  package.json  tailwind.config.ts
app/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  biome.json  middleware.ts  package.json  root.tsx  tailwind.config.ts  tailwind.css  tsconfig.json
app/app/: globals.css  layout.tsx  page.tsx
app/components/: AddShowModal.tsx  BasicStats.tsx  DeleteConfirmModal.tsx  EditProfileModal.tsx  EditShowModal.tsx  Footer.tsx  Header.tsx  NavBar.tsx  NewUserBanner.tsx  ProfileDisplay.tsx  RatingInput.tsx  RatingSystemConfig.tsx  ShowsTable.tsx  StatsTable.tsx  UserProfileSection.tsx  VenueAutocomplete.tsx
app/lib/: central-shows.ts  csv-parser.ts  google-maps.ts  osm.ts  rating-validation.ts  show-id.ts  venues.ts
app/routes/: _index.tsx  list.$username.tsx
app/types/: database.ts  google-maps.d.ts  profile.ts  rating.ts  show.ts  venue.ts
infra/: .gitignore  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
services/agent/: .env.example  .gitignore  Dockerfile  Makefile  mypy.ini  pyproject.toml
services/agent/app/: config.py  main.py
services/agent/app/clients/: google_maps.py  supabase.py
services/agent/app/models/: database.py  parse.py
services/agent/app/routers/: parse.py
services/agent/app/services/: claude_parser.py  date_normalizer.py  file_reader.py  pipeline.py  show_id.py  show_resolver.py  venue_resolver.py
services/agent/tests/: test_show_id.py
supabase/: config.toml
(+76 files in other folders)
