[project]
name = "showcount-agent"
version = "0.1.0"
description = "AI-powered show parsing service for showcount"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "anthropic>=0.42.0",
    "supabase>=2.11.0",
    "httpx>=0.28.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.18",
    "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"app/services/claude_parser.py" = ["E501"]
"app/services/date_normalizer.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
